Refactor: Move hardcoded paths to engine_config.json Opis: Replaced hardcoded asset and system paths in Java code with dynamic configuration from engine_config.json. Updated AssetService, RenderSystem, WaveSystem, PlayState, and MenuState to use GameConfig paths.